http/static/css/style.css
h1 {
    font-size: 120%;
    text-align: center;
}

body {
    font-family: Arial, sans-serif;
}

div {
    margin: 10px 0;
}

button {
    margin: 5px;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    border: 2px solid #ccc;
    border-radius: 5px;
    background-color: #f0f0f0;
    transition: background-color 0.3s, color 0.3s;
}

button:disabled {
    cursor: not-allowed;
    opacity: 0.5;
}

button.manual {
    background-color: #4caf50;
    color: white;
    border-color: #4caf50;
}

button.auto {
    background-color: #368ff4;
    color: white;
    border-color: #368ff4;
}

button.on {
    background-color: #4caf50;
    color: white;
    border-color: #4caf50;
}

button.off {
    background-color: #f44336;
    color: white;
    border-color: #f44336;
}

label {
    margin-right: 10px;
}

.container {
    display: flex;
    justify-content: space-around; 
    /* justify-content: space-between; */
}

.box {
    width: 15%;
    border-radius: 10px;
    background-color: green;
    color: white;
    padding: 10px;
    box-sizing: border-box;
    text-align: center;
}

.alert {
    background-color: #f44336;
}

.statuslabel {
    color: black;
}

.column {
    display: flex;
    flex-direction: column;
    margin-right: 20px;
}
.row {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}
.row label {
    width: 100px; /* Set the desired width */
    margin-right: 10px;
    text-align: center;
}
.row button {
    flex-shrink: 0; /* Prevent button from shrinking */
}

